spacing issuesss

--- a/src/containers/wishlist/styles.scss
+++ b/src/containers/wishlist/styles.scss
@@ -193,8 +193,11 @@ span{
     margin: 40px 0 100px 0;
 }
 .wishlist-block-outer-timer {
-  margin: 40px 0 100px 0;
-  margin-top: $header-height + $secondary-header-height + $timer-height;
+  margin: 80px 0 100px 0;
+
+  @media screen and (max-width:992px) {
+    margin: 0 0 100px 0;
+  }
 }
 .wishlist-block-outer-mobile {
   // padding-top: 30px;
@@ -584,7 +587,7 @@ icon-cross {
   margin-top: $header-height;
 }
 .page-body-timer {
-  margin-top: $header-height + $secondary-header-height + $timer-height;
+  margin-top: 80px;
 }
 .page-body-mobile-timer {
   margin-top: $header-height  + $timer-height;
